# codeword

./: .gitignore  Cargo.toml  README.md  api.md  test.sh
.github/workflows/: ci.yaml
scripts/: player_auth_sess.py
src/: board.rs  errors.rs  game.rs  lib.rs  main.rs  players.rs
src/web/: app.rs  auth.rs  cookies.rs  db.rs  errors.rs  lobby.rs  mod.rs  players.rs  requests.rs  responses.rs  tasks.rs  ws.rs  wsproto.rs
tests/: web_app.rs
