[package]
name = "codeword"
version = "0.1.0"
authors = ["Abhishek Patel <5524161+Abhishek8394@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["full"]}
warp = "0.2"
rand = "0.7.3"
serde_json = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
[dependencies.redis]
git = "https://github.com/mitsuhiko/redis-rs.git"
rev="8088a59"
features=["connection-manager", "tokio-comp"]
