[package]
name = "codeword"
version = "0.1.0"
authors = ["Abhishek Patel <5524161+Abhishek8394@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.0", features = ["full"]}
tokio-stream = "0.1"
warp = "0.3"
rand = "0.8"
serde_json = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
